--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ Thumbs.db
 Dyson'sSphere/fmod.log
 Dyson'sSphere/Builds/
 *.exe
+Dyson'sSphere/fmod_editor.log
+Dyson'sSphere/Assets/Resources/FMODStudioSettings.asset
+Dyson'sSphere/Assets/FMODStudioCache.asset
+Dyson'sSphere/Assets/Player/Animations/PlayerAnimatorController.controller
